--- a/style.css
+++ b/style.css
@@ -25,6 +25,16 @@ html{
 section{
     padding: 100px 0;
 }
+.about, .contact{    
+font-family: 'Poppins' , sans-serif;
+}
+.about .about-content, .contact .contact-content{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+}
+
 .max-width{
     max-width: 1300px;
     padding: 0 80px;
@@ -77,20 +87,211 @@ section{
     font-weight: 500;
 }
 /*about section styling */
-.about {
-    font-family: 'poppins', sans-serif;
-}
 .about .title{
     text-align: center;
-    font-family:'Ubuntu', sans-serif;
     font-size: 40px;
     font-weight: 500;
     margin-bottom: 60px;
     padding-bottom: 20px;
     color: black;
 }
+.about .about-content .left{
+    width:45%;
+}
 .about .about-content .left img{
     height: 400px;
     width: 400px;
     object-fit: cover;
+    border-radius: 6px;
+} 
+.about .about-content .right{
+    width: 55%;
+}
+.about .about-content .right .text{
+    font-size: 25px;
+    font-weight: 600;
+    margin-bottom: 10px;
+    
+}
+.about .about-content .right .text span{
+    color: #007af3;  
+}
+.about .about-content .right p{
+    text-align: justify;
+}
+.about .about-content .right a{
+    display: inline-block;
+    background: #007af3;
+    color: black;
+    font-size: 20px;
+    font-weight: 500;
+    padding: 10px 30px;
+    margin-top: 20px;
+    border-radius:6px;
+    border: 2px solid black;
+    transition: all 0.3s ease-out;
+}
+.about .about-content .right a:hover{
+    color: #007af3;
+    background: none;
+}
+.about .about-content .column{
+    width:50%;
+}
+/* contact section styling */
+.contact .title{
+    text-align : center;
+    font-size: 40px;
+    font-weight: 500;
+    margin-bottom: 60px;
+    padding-bottom: 20px;
+    color: white;
+}
+.contact .contact-content .column{
+    width: calc(50%- 30px);
+}
+.contact .contact-content .text p{
+    font-size:20px;
+    font-weight: 600;
+    margin-bottom: 20px;
+
+}
+.contact .contact-content .left p{
+    text-align: justify;
+    color: white;
+}
+.contact .contact-content .left .icons{
+    margin-top: 20px;
+}
+.contact .contact-content .row{
+    height: 65px;
+    align-items : center;
+    margin: 10px 0;
+    color:white;
+}
+.contact{
+    background: url("https://i.ytimg.com/vi/B8Gjmvj3NDo/maxresdefault.jpg") no-repeat center ;
+    height: 85vh;
+    background-size:cover;
+}
+.contact .contact-content .left .text{
+    color:  #007af3;
+    font-size: 20px;
+    margin-bottom: 10px;
+
+}
+
+.contact .contact-content .left .head{
+    color: #007af3;
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* responsive media query start */
+@media (max-width: 1104px) {
+    .about .about-content .left img{
+        height: 350px;
+        width: 350px;
+    }
+}
+@media (max-width: 991px) {
+    .max-width{
+        padding: 0 50px;
+    }
+}
+@media (max-width: 947px){
+    .navbar .menu{
+        position: fixed;
+        height: 100vh;
+        width: 100%;
+        left: -100%;
+        top: 0;
+        background: #111;
+        text-align: center;
+        padding-top: 80px;
+    }
+    .navbar .menu li{
+        display: block;
+    }
+    .navbar .menu li a{
+        display: inline-block;
+        margin: 20px 0;
+        font-size: 25px;
+    }
+    .home .home-content .text-2{
+        font-size: 70px;
+    }
+    .home .home-content .text-3{
+        font-size: 35px;
+    }
+    .home .home-content a{
+        font-size: 23px;
+        padding: 10px 30px;
+    }
+    .max-width{
+        max-width: 930px;
+    }
+    .about .about-content .column{
+        width: 100%;
+    }
+    .about .about-content .left{
+        display: flex;
+        justify-content: center;
+        margin: 0 auto 60px;
+    }
+    .about .about-content .right{
+        flex: 100%;
+    }
+    .skills .skills-content .column,
+    .contact .contact-content .column{
+        width: 100%;
+        margin-bottom: 35px;
+    }
+}
+@media (max-width: 690px) {
+    .max-width{
+        padding: 0 23px;
+    }
+    .home .home-content .text-2{
+        font-size: 60px;
+    }
+    .home .home-content .text-3{
+        font-size: 32px;
+    }
+    .home .home-content a{
+        font-size: 20px;
+    }
+}
+@media (max-width: 500px) {
+    .home .home-content .text-2{
+        font-size: 50px;
+    }
+    .home .home-content .text-3{
+        font-size: 27px;
+    }
+    .about .about-content .right .text,
+    .skills .skills-content .left .text{
+        font-size: 19px;
+    }
+    .contact .right form .fields{
+        flex-direction: column;
+    }
+    .contact .right form .name,
+    .contact .right form .email{
+        margin: 0;
+    }
+    .right form .error-box{
+       width: 150px;
+    }  
 }
