--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 html{
     scroll-behavior: smooth;
 }
-/* custom scroll bar */
+/********************************* custom scroll bar ***********************************/
 ::-webkit-scrollbar {
     width: 10px;
 }
@@ -21,7 +21,7 @@ html{
 ::-webkit-scrollbar-thumb:hover {
     background: #555;
 }
-/* all similar content styling codes */
+/******************************** all similar content styling codes ****************************************/
 section{
     padding: 100px 0;
 }
@@ -41,7 +41,7 @@ font-family: 'Poppins' , sans-serif;
     margin: auto;
 }
 
-/* navbar styling */
+/******************************* navbar styling*************************************************/
 .navbar{
     width: 100%;
     padding : 15px 0;
@@ -53,17 +53,14 @@ font-family: 'Poppins' , sans-serif;
     font-size: 35px;
     font-weight: 600; 
 }
-.navbar .logo a span{
-    color: #007af3;
-}
 
-/* home section styling*/
+/********************************* home section styling***********************************************/
 .home{
     display: flex; 
-    background: url("https://i.ytimg.com/vi/B8Gjmvj3NDo/maxresdefault.jpg") no-repeat center ;
+    background: url("https://www.teahub.io/photos/full/107-1070173_white-background-black-and-white-background-for-website.jpg") no-repeat center ;
     height: 100vh;
     background-size:cover;
-    color: white;
+    color: black;
     font-family:'Ubuntu', sans-serif;
 }
 .home .max-width{
@@ -79,14 +76,11 @@ font-family: 'Poppins' , sans-serif;
     margin-left : -3px;
 }
 .home .home-content .text3{
-    font-size: 40px;
-    margin: 5px 0;
+    font-size: 20px;
+    margin: 50px 0;
+    margin-bottom: 10px;
 }
-.home .home-content .text3 span{
-    color: #007af3;
-    font-weight: 500;
-}
-/*about section styling */
+/******************************about section styling **********************************************/
 .about .title{
     text-align: center;
     font-size: 40px;
@@ -107,22 +101,21 @@ font-family: 'Poppins' , sans-serif;
 .about .about-content .right{
     width: 55%;
 }
-.about .about-content .right .text{
-    font-size: 25px;
+.about .about-content .right .text { 
+    font-size: 20px;
     font-weight: 600;
-    margin-bottom: 10px;
-    
 }
-.about .about-content .right .text span{
-    color: #007af3;  
+.about .about-content .right .text2{ 
+    font-size: 20px;
+    font-weight: 600;
 }
 .about .about-content .right p{
     text-align: justify;
 }
 .about .about-content .right a{
     display: inline-block;
-    background: #007af3;
-    color: black;
+    background: black;
+    color: white;
     font-size: 20px;
     font-weight: 500;
     padding: 10px 30px;
@@ -132,20 +125,22 @@ font-family: 'Poppins' , sans-serif;
     transition: all 0.3s ease-out;
 }
 .about .about-content .right a:hover{
-    color: #007af3;
+    color: black;
     background: none;
 }
 .about .about-content .column{
     width:50%;
 }
-/* contact section styling */
+
+
+   /* **************************************contact section styling************************** */
 .contact .title{
     text-align : center;
     font-size: 40px;
-    font-weight: 500;
+    font-weight: 600;
     margin-bottom: 60px;
     padding-bottom: 20px;
-    color: white;
+    color: black;
 }
 .contact .contact-content .column{
     width: calc(50%- 30px);
@@ -158,47 +153,94 @@ font-family: 'Poppins' , sans-serif;
 }
 .contact .contact-content .left p{
     text-align: justify;
-    color: white;
+    color: black;
 }
 .contact .contact-content .left .icons{
     margin-top: 20px;
 }
 .contact .contact-content .row{
-    height: 65px;
-    align-items : center;
-    margin: 10px 0;
-    color:white;
+    height: 0px;
+    margin: 0px;
+    color: black;
+    
 }
 .contact{
-    background: url("https://i.ytimg.com/vi/B8Gjmvj3NDo/maxresdefault.jpg") no-repeat center ;
-    height: 85vh;
+    background: url("https://www.teahub.io/photos/full/107-1070173_white-background-black-and-white-background-for-website.jpg") no-repeat center ;
+    height: 100vh;
     background-size:cover;
 }
 .contact .contact-content .left .text{
-    color:  #007af3;
+    color: black;
     font-size: 20px;
-    margin-bottom: 10px;
-
+    font-weight: 600;
 }
-
 .contact .contact-content .left .head{
-    color: #007af3;
-
+    color: black ;
+}
+.contact .right{
+    margin-left: 120%;
+    display: inline-block;
+}
+.contact .contact-content .info .head{
+    font-weight: 550;
+}
+.contact .right form .fields{
+    display: flex;
+}
+.contact .right form .fields,
+.contact .right form .fields .field{
+    height:45px;
+    width: 89%;
+    margin-bottom: 10px;
+}
+.contact .right form .field input{
+    height: 100%;
+    width: 130%;
+    border: 1px solid black;
+    border-radius :6px;
+    padding: 0 15px;
+    outline:none;
+    font-size: 15px;
+    font-family: 'Poppins', sans-serif;
+} 
+.contact .right form .subject{
+    height: 50px;
+    width: 77%; 
+    margin-bottom: 10px;
+}
+.contact .right form .name{
+    margin-right: 50px;
+}
+.contact .right form .textarea textarea{
+    resize: none;
+    border: 1px solid black;
+    border-radius: 6px;
+    padding : 0 15px;
+    outline:none;
+    font-size: 15px;
+    font-family: 'Poppins', sans-serif;
+}
+.right form .button-area button{
+  color: white;
+  display: block;
+  width: 160px;
+  height: 45px;
+  outline: none;
+  font-size: 18px;
+  font-weight: 500;
+  border-radius: 6px;
+  cursor: pointer;
+  flex-wrap: nowrap;
+  background: black;
+  border: 2px solid black;
+  transition: all 0.3s ease;
+}
+.right form .button-area button:hover{
+  color: black;
+  background: none;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-/* responsive media query start */
+/************************************** responsive media query start *************************************************/
 @media (max-width: 1104px) {
     .about .about-content .left img{
         height: 350px;
@@ -211,6 +253,13 @@ font-family: 'Poppins' , sans-serif;
     }
 }
 @media (max-width: 947px){
+    .menu-btn{
+        display: block;
+        z-index: 999;
+    }
+    .menu-btn i.active:before{
+        content: "\f00d";
+    }
     .navbar .menu{
         position: fixed;
         height: 100vh;
@@ -220,6 +269,10 @@ font-family: 'Poppins' , sans-serif;
         background: #111;
         text-align: center;
         padding-top: 80px;
+        transition: all 0.3s ease;
+    }
+    .navbar .menu.active{
+        left: 0;
     }
     .navbar .menu li{
         display: block;
@@ -253,12 +306,18 @@ font-family: 'Poppins' , sans-serif;
     .about .about-content .right{
         flex: 100%;
     }
-    .skills .skills-content .column,
     .contact .contact-content .column{
-        width: 100%;
-        margin-bottom: 35px;
+        width: 95%;
+        margin: auto;
+        
     }
-}
+    .contact .contact-content .right{
+        margin-top:70%;
+    }
+    .contact .right form .textarea textarea{
+        width: 100%;  
+        margin-top: -10px;  
+    }
 @media (max-width: 690px) {
     .max-width{
         padding: 0 23px;
@@ -287,11 +346,12 @@ font-family: 'Poppins' , sans-serif;
     .contact .right form .fields{
         flex-direction: column;
     }
-    .contact .right form .name,
-    .contact .right form .email{
-        margin: 0;
+    .contact .right form .fields .email{
+        width: 86%;
+        margin-bottom: -10px;
     }
-    .right form .error-box{
-       width: 150px;
-    }  
-}
+ .contact .right form .fields .name{
+        width: 86%;
+        margin-bottom: 0px;
+    }
+}}
